--- a/references.bib
+++ b/references.bib
@@ -1,6 +1,6 @@
 
 @article{fomin2006,
-	title = {Digitizing a Dictionary of Medieval Irish: the eDIL Project},
+	title = {Digitizing a Dictionary of {{Medieval Irish}}: the {{eDIL Project}}},
 	author = {Fomin, Maxim and Toner, Gregory},
 	year = {2006},
 	month = {04},
@@ -91,4 +91,60 @@
 	date = {2023-05-26},
 	doi = {10.25446/oxford.23515788},
 	langid = {en}
+}
+
+@book{holle-list-barrier-islands,
+	title = {Holle lists: Vocabularies in languages of Indonesia, Vol. 10/3: Islands off the west coast of Sumatra},
+	editor = {Stokhof, W. A. L. and Almanar, Alma E.},
+	year = {1987},
+	date = {1987},
+	publisher = {Dept. of Linguistics, Research School of Pacific Studies, The Australian National University},
+	series = {Pacific Linguistics (Series D)},
+	volume = {Materials in Languages of Indonesia},
+	number = {76},
+	url = {http://hdl.handle.net/1885/144589},
+	note = {Citation Key: 1885-144589},
+	address = {Canberra, A.C.T., Australia}
+}
+
+@unpublished{rajeg2025,
+  type = {presentation},
+  title = {The Data Science behind the Curation of the {{Holle List}}: {{A}} Case Study from the {{Enggano Holle List}} and Its Neighbouring {{Barrier Islands Languages}}},
+  shorttitle = {The Data Science behind the Curation of the {{Holle List}}},
+  author = {Rajeg, Gede Primahadi Wijaya and Arka, I Wayan and Pramartha, Cokorda Rai Adi and Sangian, Engga Zakaria},
+  date = {2025},
+  publisher = {University of Oxford},
+  doi = {10.25446/oxford.29625407.v1},
+  url = {https://portal.sds.ox.ac.uk/articles/presentation/The_data_science_behind_the_curation_of_the_Holle_List_A_case_study_from_the_Enggano_Holle_List_and_its_neighbouring_Barrier_Islands_Languages/29625407/1},
+  urldate = {2025-08-06},
+  abstract = {This research was presented in the Oceanic and Southeast Asian Navigators (OCSEAN) Conference at the Faculty of Humanities, Udayana University, Bali, Indonesia (21-22 July 2025). Our talk (and others in both days of the conference) was live-streamed and can be watched from this URL. The topic concerns the curation of the Holle List (see the digital reference database here) and its associated regional lists, particularly the Enggano list and the neighbouring Barrier Islands Languages of Sumatra, Indonesia.Student contributors who help digitise the remaining Holle List of the Barrier Islands Languages are mentioned below in the Contributor section.},
+  eventtitle = {Oceanic and {{Southeast Asian Navigators}} ({{OCSEAN}}) {{Conference}}},
+  langid = {english},
+  venue = {Faculty of Humanities, Udayana University},
+  file = {C:\Users\GRajeg\Zotero\storage\ESHBM3WB\Rajeg et al._The data science behind the curation of the Holle List A case study from the Enggano Holle List and.pdf}
+}
+
+@article{donoho2017,
+	title = {50 Years of Data Science},
+	author = {Donoho, David},
+	year = {2017},
+	month = {10},
+	date = {2017-10-02},
+	journal = {Journal of Computational and Graphical Statistics},
+	pages = {745--766},
+	volume = {26},
+	number = {4},
+	doi = {10.1080/10618600.2017.1384734},
+	url = {https://doi.org/10.1080/10618600.2017.1384734}
+}
+
+@book{wickham2023,
+	title = {R for data science: import, tidy, transform, visualize, and model data},
+	author = {Wickham, Hadley and {Çetinkaya-Rundel}, Mine and Grolemund, Garrett},
+	year = {2023},
+	date = {2023},
+	publisher = {O'Reilly},
+	edition = {Second edition},
+	url = {https://r4ds.hadley.nz/},
+	address = {Beijing ; Sebastopol, CA}
 }
