--- a/snbi2026-holle-list.qmd
+++ b/snbi2026-holle-list.qmd
@@ -36,20 +36,20 @@ search: true
 
 ## Introduction {#sec-intro}
 
-This paper reports on a digital humanities project of digitalising and curating large volumes of word list, the so-called *Holle List vocabulary*. The Holle List vocabulary list was originated in the late 19^th^ century as a project by [Karel Frederik Holle](https://en.wikipedia.org/wiki/Karel_Holle), a Dutch colonial administrator. His aim was to gain knowledge about the linguistic situation of the Dutch East Indies of the present-day state of Indonesia. In the first edition of the Holle List [@holle1894], Holle set up a list of elicitation concepts (i.e., 905 concepts to be exact) in Dutch [@holle1894, 8-38] to be dispersed throughout the Indonesian archipelago. The goal was to collect the corresponding expressions/words of these elicited concepts (from various semantic domains) across over two hundreds indigenous regional language-varieties of Indonesia.
+This paper reports on a digital humanities project of digitalising and curating large volumes of word list, the so-called *Holle List vocabulary*. The Holle List project was initiated in the late 19^th^ century by [Karel Frederik Holle](https://en.wikipedia.org/wiki/Karel_Holle), a Dutch colonial administrator. His aim was to gain knowledge about the linguistic situation of the Dutch East Indies of the present-day state of Indonesia. In the first edition of the Holle List [@holle1894], K. F. Holle set up a list of elicitation concepts (i.e., 905 concepts to be exact) given in Dutch [@holle1894, 8-38]. This list was dispersed throughout the Indonesian archipelago. The goal was to collect the corresponding expressions/words of these elicited concepts (from various semantic domains) across over two hundreds indigenous regional language-varieties of Indonesia.
 
-Between 1980 and 1987, W. A. L. Stokhof and his colleagues, namely Lia Saleh-Bronckhorst and Alma E. Almanar, edited, collated, and published (i) the different versions of the master, elicitation Holle List as well as (ii) the corresponding expressions/words in the indigenous language-varieties into eleven-volume publication series[^1]. These publications are available open access under the Creative Commons License (see @fig-holle-list-search-output in @sec-data-source-acquisition). There are two main parts of these publications. The first one is the volume containing just the reference Holle List, that is the elicitation concepts given in Dutch, English, and Indonesian/Malay together with the index numbers of these concepts (see @fig-matching-master-and-regional-1). The second part is the separate volumes containing the expressions/words of the regional language-varieties and their index numbers (see @fig-matching-master-and-regional-2 for an example from the Enggano language \[Glottocode: [engg1245](http://glottolog.org/resource/languoid/id/engg1245)\]); these index numbers correspond to the index numbers of the concepts given in Dutch, English, and Indonesian in the reference Holle List. It is important to note that there is only one volume of the reference Holle List containing the Dutch, English, and Indonesian concepts; the content of this reference volume is not repeated in the remaining volumes for the expressions/words in the regional language-varieties, but only the index numbers.
+Between 1980 and 1987, W. A. L. Stokhof and his colleagues (viz. Lia Saleh-Bronckhorst and Alma E. Almanar) edited, collated, and published (i) the different versions of the reference/master, elicitation Holle List as well as (ii) the corresponding expressions/words in the indigenous language-varieties into eleven-volume publication series[^1]. These publications are available open access under the Creative Commons License (see @fig-holle-list-search-output in @sec-data-source-acquisition). There are two main parts of these publications. The first one is the volume containing just the reference (or master) Holle List [@holleli1980], comprising the elicitation concepts given in Dutch, English, and Indonesian/Malay together with the index numbers of these concepts (see @fig-matching-master-and-regional-1); this is called *The New Basic List* (hereafter NBL) in Stokhof [-@holleli1980] because Stokhof and colleagues collated three different versions of the Holle List (namely those published in 1894, 1904/1911, and 1931; see @fig-matching-master-and-regional-1). The second part of the Holle List publications is the separate volumes containing the expressions/words of the regional language-varieties and their index numbers (see @fig-matching-master-and-regional-2 for an example from the Enggano language \[Glottocode: [engg1245](http://glottolog.org/resource/languoid/id/engg1245)\]); these index numbers for words in the regional languages correspond to the index numbers of the concepts in the reference Holle List/NBL. It is important to note that there is only one volume of the NBL; the content of the NBL is not repeated in the remaining volumes for the expressions/words in the regional language-varieties, but only the index numbers.
 
 [^1]: See these Holle List publication series [on this page](https://openresearch-repository.anu.edu.au/search?spc.page=1&query=Holle%20Lists&scope=bbe2244b-212d-44b4-b33a-59048fd7e13f).
 
-In the above two-parts publication set-up, linguists, who are interested in knowing what the Dutch, English, and Indonesian glosses of *a* given word in *a* given regional language, must match the index number of that regional word with the same index number in the reference Holle List.
+In the above two-parts publication setup, linguists, who are interested in the Dutch, English, and Indonesian/Malay translations of *a* given word in *a* given regional language, must manually match the index number of that regional word with the same index number in the reference Holle List. Let us use the data snippet in @fig-matching-master-and-regional as an example.
 
 ```{r}
 #| label: fig-matching-master-and-regional
-#| fig-cap: "Correspondence between indexes of the regional list of Enggano and the reference Holle List for the glosses."
+#| fig-cap: "Correspondence between index numbers of the regional list of Enggano and of the reference Holle List (or the New Basic List [NBL])."
 #| fig-subcap: 
-#|   - "reference Holle List"
-#|   - "Enggano regional list"
+#|   - "the reference Holle List/NBL [@holleli1980]"
+#|   - "Enggano regional list [@holle-list-barrier-islands]"
 #| fig-cap-location: bottom
 #| out-width: "80%"
 #| layout-nrow: 2
@@ -59,11 +59,15 @@ knitr::include_graphics("img/matching-enggano-list.png")
 
 ```
 
-Let us use the data in @fig-matching-master-and-regional as an example. To understand what the Enggano word “èbaka” (ID number 3) refers to in Dutch, English, and Indonesian/Malay, one must look up the ID number 3 in the reference Holle List. In this case, “èbaka” in Enggano refers to ‘*gezicht, aangezicht*’ in Dutch, ‘face’ in English, and ‘*muka*, *wajah*’ in Indonesian/Malay [see @rajeg2023eno for the Enggano Holle List dataset that has been computationally matched with the Dutch, English, and Indonesian/Malay glosses].
+To understand what the Enggano word “èbaka” (ID number 3) refers to in Dutch, English, and Indonesian/Malay, one must look up the ID number 3 in the NBL. In this case, “èbaka” in Enggano refers to ‘*gezicht, aangezicht*’ in Dutch, ‘face’ in English, and ‘*muka*, *wajah*’ in Indonesian/Malay. Alternatively, from the perspective of the NBL, linguists could have asked how a given concept is lexicalised in a given language. For example, the concept of ‘*lichaam*’ or ‘body’ in English (and ‘*badan, tubuh*’ in Indonesian) (ID number 1 in the NBL) can be lexicalised by two forms in Enggano, as shown by those given for the ID number 1 in the Enggano list, viz. “kărāhā” and “koedŏdŏkŏ”.
 
-At the moment, the PDF file of the reference, master Holle List [@holleli1980] has been digitalised into computer-readable, searchable and manipulable database [@rajeg2023] and available online as a webpage at <https://engganolang.github.io/digitised-holle-list/>. This digital master Holle List was used to computationally match the regional word list for Enggano with the corresponding Dutch, English, and Indonesian glosses in the master Holle List [@rajeg2023eno]. In addition, the motivation to digitalise the reference, master Holle List to envisage scaling-up the computational matching of the other regional Holle Lists once they have been also digitalised. This provides an opportunity to collate these two-parts publications into a digital cross-linguistic lexical database whereby the regional languages are matched with their corresponding Dutch, English, and Indonesian/Malay glosses.
+With such paper-based separate setup between elements of words and their translations, one could imagine the amount of manual back-and-forth procedure needed to link the words and their translations. The development of modern data science [@donoho2017] allows us to (i) conceive such setup as disjointed relational data with common keys, namely the index numbers present in both data set (the NBL and the given regional list), and (ii) computationally join them at scale once they are both in computer-readable format [see @wickham2023, Ch. 19, for the description of table-joining and its computational implementation in the R programming language].
 
-Why digitalise all? Provide large data for systematic computational historical linguistic analysis in finding relationship between language or diachronic changes of the same language, combining the older data set and the present-day, modern dataset. Other large scale analysis on collexification pattern (i.e., cross-language polysemy).
+In order to tackle the problem of manual matching with a desiderata for computational matching between the NBL and the regional lists, the PDF file containing the NBL table [@holleli1980] has been digitalised into computer-readable, searchable and manipulable database [@rajeg2023] and available online as a webpage at <https://engganolang.github.io/digitised-holle-list/>. The computational joining of the translations in the digitalised NBL data into the regional list data is via the matching keys, viz. the index numbers. This digitalised NBL (in a tab-separated plain-text file) has first been implemented in joining the (also digitalised) regional word list for Enggano with the corresponding Dutch, English, and Indonesian glosses in the master Holle List [@rajeg2023eno; @rajeg2025].
+
+In addition, the motivation to digitalise the reference, master Holle List to envisage scaling-up the computational matching of the other regional Holle Lists once they have been also digitalised. This will enable the collation of these two-parts publications into a digital cross-linguistic lexical database whereby the regional languages are matched with their corresponding Dutch, English, and Indonesian/Malay glosses.
+
+Why digitalise all? Provide large data that open new possibilities for systematic computational historical linguistic analysis in finding relationship between language or diachronic changes of the same language, combining the older data set and the present-day, modern dataset. Other large scale analysis on collexification pattern (i.e., cross-language polysemy).
 
 How to scale-up the digitalisation process for all eleven volumes?
 
